--- a/manifest.json
+++ b/manifest.json
@@ -16,6 +16,11 @@
   "permissions": [
     "activeTab",
     "tabs",
-    "<all_urls>"
-  ]
+    "<all_urls>",
+    "webRequest",
+    "webRequestBlocking"
+  ],
+  "background": {
+    "scripts": ["background.js"]
+  }
 }
